replace home icon with arrow icons

--- a/src/internal-packages/instance-header/styles/index.less
+++ b/src/internal-packages/instance-header/styles/index.less
@@ -9,7 +9,7 @@
   overflow: hidden;
 
   &-icon {
-    &-home { font-size: 16px; }
+    &-arrow { font-size: 16px; }
     &-lock { font-size: 12px; }
   }
 
@@ -29,7 +29,7 @@
       flex-basis: auto;
       min-width: 250px;
 
-      .instance-header-icon-home {
+      .instance-header-icon-arrow {
         background-color: @compass-sidebar-hover-background-color;
       }
     }
@@ -38,7 +38,7 @@
     &-is-active:hover {
       background-color: @compass-sidebar-active-background-color;
 
-      .instance-header-icon-home {
+      .instance-header-icon-arrow {
         background-color: @compass-sidebar-active-background-color;
       }
     }
@@ -51,7 +51,7 @@
     text-align: center;
   }
 
-  &-icon-home {
+  &-icon-arrow {
     background-color: @compass-sidebar-base-background-color;
     width: 36px;
     height: 36px;
@@ -168,7 +168,7 @@
     .instance-header-connection-string {
       background-color: @gray8;
     }
-    .instance-header-icon-home {
+    .instance-header-icon-arrow {
       color: @pw;
       margin-right: 15px;
     }
