--- a/src/internal-packages/chart/styles/draggable-field.less
+++ b/src/internal-packages/chart/styles/draggable-field.less
@@ -138,7 +138,10 @@
 
   //field main title
   &-title {
-    padding: 1px 3px;
+    border-left: 4px double @gray5;
+    line-height: 1;
+    margin: 2px 0;
+    padding: 1px 3px 0 4px;
   }
 
   &:hover {
