Consolidate styles for new <InfoSprinkle>
They exist in 'internal-packages/app' until presumably at a later date, all these styles will get moved into hadron-react-components where the components being styled currently reside.

--- a/src/internal-packages/app/styles/index.less
+++ b/src/internal-packages/app/styles/index.less
@@ -1,5 +1,6 @@
 @import './modal-status-message.less';
 @import './hadron-tooltip.less';
+@import './info-sprinkle.less';
 @import './option-selector.less';
 @import './sortable-table.less';
 @import './status-row.less';
