COMPASS-1177: Adding read preference and rs name to connect

--- a/src/app/connect/index.jade
+++ b/src/app/connect/index.jade
@@ -24,6 +24,13 @@
 
       hr
 
+      div(data-hook='deployment-awareness-subview')
+        #rs-rp.form-group
+          div(data-hook='replica-set-name-subview')
+          div(data-hook='read-preference-subview')
+
+      hr
+
       div(data-hook='sslselect-subview')
 
       - for method, i in sslMethods || {}
