Ensure read preference saves on connection

--- a/src/app/connect/index.jade
+++ b/src/app/connect/index.jade
@@ -26,7 +26,7 @@
 
       #rs-rp.form-group
         div(data-hook='replica_set_name_subview')
-        div(data-hook='read-preference-subview')
+        div(data-hook='read_preference_subview')
 
       hr
 
