COMPASS-1177: Adding read preference and rs name to connect (#1001)
* COMPASS-1177: Adding read preference and rs name to connect

* Update data-service and connection-model

* Ensure replica set name saves

* Ensure read preference saves on connection

* Don't use data service actions or store

--- a/src/app/connect/index.jade
+++ b/src/app/connect/index.jade
@@ -24,6 +24,12 @@
 
       hr
 
+      #rs-rp.form-group
+        div(data-hook='replica_set_name_subview')
+        div(data-hook='read_preference_subview')
+
+      hr
+
       div(data-hook='sslselect-subview')
 
       - for method, i in sslMethods || {}
