--- a/src/app/styles/mms-icons.less
+++ b/src/app/styles/mms-icons.less
@@ -44,6 +44,10 @@ i.mms-icon-big-check {
   font-size: 128px;
 }
 
+i[class^="mms-icon-chart-"] {
+  font-size: 32px;
+}
+
 i[class^="mms-icon-"] {
   position: relative;
   i {
@@ -220,6 +224,14 @@ i.mms-icon-logo-apple:before                                    { content: "\E50
 i.mms-icon-logo-linux:before                                    { content: "\E503" }
 i.mms-icon-logo-windows:before                                  { content: "\E504" }
 i.mms-icon-logo-redhat:before                                   { content: "\E505" }
+
+i.mms-icon-chart-table:before                                   { content: "\E506" }
+i.mms-icon-chart-line:before                                    { content: "\E507" }
+i.mms-icon-chart-bar:before                                     { content: "\E508" }
+i.mms-icon-chart-area:before                                    { content: "\E509" }
+i.mms-icon-chart-scatter:before                                 { content: "\E510" }
+i.mms-icon-chart-donut:before                                    { content: "\E511" }
+
 i.mms-icon-rocketbot:before                                     { content: "\F006" }
 i.mms-icon-snowbot:before                                       { content: "\F007" }
 
