--- a/src/internal-packages/chart/styles/encoding-channel.less
+++ b/src/internal-packages/chart/styles/encoding-channel.less
@@ -1,4 +1,6 @@
 .chart-encoding-channel {
+  -webkit-transition: all 2000ms ease;
+  transition: all 2000ms ease;
 
   &-label {
     margin: 2px;
@@ -10,23 +12,30 @@
   }
 
   &-droppable {
-    background: white;
-    border: 1px solid @gray5;
-    border-radius: 3px;
-    color: @gray5;
+    background: @gray7;
+    border: 1px solid @gray7;
+    border-radius: 6px;
+    color: @gray4;
     padding: 4px;
     text-overflow: ellipsis;
 
-    &-over {
-      border-color: @green2;
-      background: white;
-      box-shadow: 0 0 6px 0 rgba(107,164,66, .6);
+    &-can-drop {
+      background: @gray6;
+      border-color: @gray5;
+      box-shadow: inset 1px 1px 2px rgba(0,0,0,.2);
+      color: @gray1;
     }
 
-    &-can-drop {
+    &-over {
       border-color: @chart1;
-      background: white;
-      box-shadow: 0 0 6px 0 rgba(67,177,229, .6);
+      box-shadow: 0 0 6px 0 rgba(67,177,229, .2);
+      color: darken(@chart1, 20%);
+    }
+
+    &-has-field {
+      background: transparent;
+      border: none;
+      padding: 0;
     }
   }
 
