--- a/src/internal-packages/sidebar/styles/index.less
+++ b/src/internal-packages/sidebar/styles/index.less
@@ -7,7 +7,7 @@
 @compass-sidebar-lite-background-color: #565E65;
 @compass-sidebar-active-background-color: #6D7984;
 @compass-sidebar-hover-background-color: #42494f;
-@transistion-time: 400ms;
+@compass-sidebar-transition-time: 400ms;
 
 .compass-sidebar {
   background: @compass-sidebar-base-background-color;
@@ -18,7 +18,7 @@
   flex-shrink: 0;
   margin: 0;
   overflow: hidden;
-  transition: flex-basis @transistion-time ease;
+  transition: flex-basis @compass-sidebar-transition-time ease;
 
   &-toggle {
     height: 16px;
