Remove unused extra @transistion-time definition
Also - typo :)

--- a/src/internal-packages/sidebar/styles/sidebar-instance-properties.less
+++ b/src/internal-packages/sidebar/styles/sidebar-instance-properties.less
@@ -1,5 +1,4 @@
-/* Styles for the isidebar nstance properties */
-@transistion-time: 400ms;
+/* Styles for the sidebar instance properties */
 
 .compass-sidebar {
   &-properties {
