Handle loading screen going full-screen

--- a/src/app/loading/loading.html
+++ b/src/app/loading/loading.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>MongoDB Compass - Loading</title>
-    <script src="jquery-2.1.4.min.js"></script>
     <link href="style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
@@ -10,8 +8,6 @@
     <i class="mms-icon-big-check"></i>
     <i class="mms-icon-cloud-m hover"></i>
     <i class="mms-icon-cloud-l hover"></i>
-    <span class="setting">Setting Up ...</span>
-
-    <script type="text/javascript" src="rocketbot.js"></script>
+    <span class="setting">Loading ...</span>
   </body>
 </html>
