--- a/src/app/loading/loading.html
+++ b/src/app/loading/loading.html
@@ -4,7 +4,7 @@
     <link href="style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <i class="mms-icon-rocketbot hover"></i>
+    <i id="rocketbot" class="mms-icon-rocketbot hover"></i>
     <i class="mms-icon-big-check"></i>
     <i class="mms-icon-cloud-m hover"></i>
     <i class="mms-icon-cloud-l hover"></i>
