background image for chart builder zero state

--- a/src/internal-packages/chart/styles/chart-builder.less
+++ b/src/internal-packages/chart/styles/chart-builder.less
@@ -22,9 +22,17 @@
   }
 
   &-chart-area {
+    background-image: url('./images/chart/chart-builder-zero-state.png');
+    background-size: 600px 260px;
+    background-position: 50% 60px;
+    background-repeat: no-repeat;
     flex-basis: auto;
     flex-grow: 1;
     flex-shrink: 1;
+  }
+
+  &-chart {
+    background-color: @pw;
   }
 
   &-chart-panel {
