add class to replace no icon state for chart types with no icons

--- a/src/internal-packages/chart/styles/index.less
+++ b/src/internal-packages/chart/styles/index.less
@@ -2,6 +2,7 @@
 @import './encoding-channel.less';
 @import './field-panel.less';
 @import './draggable-field.less';
+@import './type-picker.less';
 
 .chart-container {
   display: flex;
