--- a/src/internal-packages/chart/styles/type-picker.less
+++ b/src/internal-packages/chart/styles/type-picker.less
@@ -2,4 +2,23 @@
   &-no-icon {
     padding-right: 27px;
   }
+
+  &-dropdown {
+    width: 200px;
+  }
+
+  &-toggle {
+    width: 100%;
+  }
+
+  &-title {
+    background-color:  #ebebed;
+    border-radius: 6px;
+    height: 30px;
+  }
+
+  &-caret-down {
+    float: right;
+    padding: 5px;
+  }
 }
