--- a/src/app/styles/buttons.less
+++ b/src/app/styles/buttons.less
@@ -38,7 +38,8 @@
       border: 1px solid #CACACA;
     }
 
-    &:active {
+    &:active,
+    &.open {
       background: linear-gradient(180deg, #EDEDED 0%, #FFFFFF 99.31%);
       box-shadow: inset 0 2px 2px 0 #CACACA;
     }
