Document code smells found in review as TODOs
So it's at least clearer to the next person who has to deal with it.

--- a/src/app/styles/index.less
+++ b/src/app/styles/index.less
@@ -4,6 +4,7 @@
 @import "./buttons.less";
 @import "./react-select.less";
 
+// TODO: Is this import broken?
 @import (css) "../../node_modules/highlight.js/styles/github.css";
 @import "palette.less";
 @import "fontawesome.less";
@@ -28,6 +29,7 @@ html, body {
 
 #application {
 
+  // TODO: These #statusbar should be moved into internal-packages/status/styles
   #statusbar {
     background-color: rgba(255, 255, 255, .5);
     position: fixed;
