--- a/src/app/loading/loading.html
+++ b/src/app/loading/loading.html
@@ -4,10 +4,8 @@
     <link href="style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <i id="rocketbot" class="mms-icon-rocketbot hover"></i>
-    <i class="mms-icon-big-check"></i>
-    <i class="mms-icon-cloud-m hover"></i>
-    <i class="mms-icon-cloud-l hover"></i>
-    <span class="setting">Loading ...</span>
+    <div class="sq sq1"></div>
+    <div class="sq sq2"></div>
+    <span>loading&hellip;</span>
   </body>
 </html>
