Made trashcan delete button proportional

--- a/src/internal-packages/app/styles/sortable-table.less
+++ b/src/internal-packages/app/styles/sortable-table.less
@@ -50,6 +50,10 @@
     padding: 13px 0 13px 24px;
   }
 
+  &-trash-button { 
+    padding: 0 8px 0 8px;
+  }
+
   &-is-dark-theme {
     .sortable-table-th, .sortable-table-td {
       color: @pw;
