--- a/src/internal-packages/app/styles/sortable-table.less
+++ b/src/internal-packages/app/styles/sortable-table.less
@@ -1,7 +1,8 @@
 .sortable-table {
   &-table {
     table-layout: auto;
-    border-collapse: collapse;
+    border-collapse: separate;
+    border-spacing: 0 3px;
     width: 100%;
   }
 
@@ -42,11 +43,15 @@
   &-tbody-tr {
     height: 50px;
     background-color: @pw;
+    box-shadow: 0 2px 10px 0 rgba(0,0,0,0.075);
   }
 
   &-td {
-    border-bottom: 3px solid @gray8;
     padding: 13px 0 13px 24px;
+  }
+
+  &-trash-button { 
+    padding: 0 8px 0 8px;
   }
 
   &-is-dark-theme {
