Press tab to move around document in edit mode. Can press enter to open new field menu

--- a/src/app/styles/buttons.less
+++ b/src/app/styles/buttons.less
@@ -160,6 +160,9 @@
     font-size: 11px;
     border-radius: 8px;
     padding: 1px 12px;
+    &:focus, &:hover {
+      color: #494747;
+    }
   }
 
   &-borderless {
