--- a/src/internal-packages/crud/styles/editable-expandable-element.less
+++ b/src/internal-packages/crud/styles/editable-expandable-element.less
@@ -98,6 +98,24 @@
     }
 
     &-is-editing {
+      
+      .line-number:focus {
+        outline: 0;
+        color: #494747;
+        font-weight: bold;
+        border: 1px solid #494747;
+        border-radius: 2px;
+
+        &:before {
+          content: '+';
+        }
+
+        &-is-selected {
+          &:before {
+            content: '-';
+          }
+        }
+      }
 
       &:hover {
         background-color: @gray8;
