Add hover state for create DB button, add border shadow to index cards

--- a/src/internal-packages/sidebar/styles/index.less
+++ b/src/internal-packages/sidebar/styles/index.less
@@ -140,6 +140,8 @@
 
   &-button-create-database:hover {
     width: 100%;
+    background-color: @compass-sidebar-active-background-color;
+
   }
 
   &-button-create-database:hover text {
