--- a/src/internal-packages/indexes/styles/index.less
+++ b/src/internal-packages/indexes/styles/index.less
@@ -22,7 +22,8 @@
 
   table {
     table-layout: auto;
-    border-collapse: collapse;
+    border-collapse: separate;
+    border-spacing: 0 3px; 
     width: 100%;
   }
 
@@ -69,6 +70,7 @@
   table tbody tr {
     height: 50px;
     background-color: white;
+    box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.075);
     &:hover {
 
       .name-column .name {
@@ -96,7 +98,6 @@
 
 
   table tr td {
-    border-bottom: 3px solid @gray8;
     padding: 13px 0;
 
     &.name-column {
