Pressing tab will close type selector menu

--- a/src/internal-packages/crud/styles/editable-element.less
+++ b/src/internal-packages/crud/styles/editable-element.less
@@ -235,6 +235,10 @@
     height: 17px;
     flex-shrink: 0;
 
+    .closed > .dropdown-menu {
+      display: none;
+    }
+
     .type-label {
       padding: 1px 12px;
     }
