--- a/src/internal-packages/chart/styles/draggable-field.less
+++ b/src/internal-packages/chart/styles/draggable-field.less
@@ -150,6 +150,11 @@
   }
 
   &-array-picker {
+    &-title {
+      font-size: 13px;
+      font-weight: bold;
+      text-transform: uppercase;
+    }
     &-column {
       flex-direction: column;
     }
