style for array reduction in draggable fields

--- a/src/internal-packages/chart/styles/encoding-channel.less
+++ b/src/internal-packages/chart/styles/encoding-channel.less
@@ -39,4 +39,11 @@
     }
   }
 
+  //draggable field styles specific to the encoding channel
+  .chart-draggable-field {
+    &-title {
+      padding-bottom: 2px;
+    }
+  }
+
 }
