--- a/src/app/styles/mms-icons.less
+++ b/src/app/styles/mms-icons.less
@@ -232,6 +232,7 @@ i.mms-icon-chart-area:before                                    { content: "\E50
 i.mms-icon-chart-scatter:before                                 { content: "\E510" }
 i.mms-icon-chart-donut:before                                   { content: "\E511" }
 i.mms-icon-chart-pie:before                                     { content: "\E512" }
+i.mms-icon-array:before                                         { content: "\E513" }
 
 i.mms-icon-rocketbot:before                                     { content: "\F006" }
 i.mms-icon-snowbot:before                                       { content: "\F007" }
