--- a/src/internal-packages/chart/styles/draggable-field.less
+++ b/src/internal-packages/chart/styles/draggable-field.less
@@ -200,4 +200,12 @@
     border-left-color: transparent;
     padding-left: 1px;
   }
+
+  .mms-icon-array {
+    color: @gray4;
+    flex-basis: 16px;
+    flex-grow: 0;
+    flex-shrink: 0;
+    align-self: flex-start;
+  }
 }
