--- a/src/internal-packages/chart/styles/draggable-field.less
+++ b/src/internal-packages/chart/styles/draggable-field.less
@@ -34,39 +34,67 @@
     min-width: 0;
   }
 
-  &-action {
-    background: linear-gradient(180deg, #FFFFFF 0%, #F6F6F6 100%);
-    box-shadow: inset 0 -1px 0 0 lighten(@gray5, 8%);
-    background: linear-gradient(180deg, #FFFFFF 0%, #F6F6F6 100%);
-    border: 1px solid lighten(@gray5, 8%);
-    border-radius: 3px;
-    cursor: pointer;
-    padding: 3px 2px 2px;
+  &-item-container-reduction {
+    flex-basis: 100%;
   }
 
-  &-action:hover,
-  &-action:focus {
+  &-action {
+    border-radius: 3px;
+    cursor: pointer;
+    display: flex;
+    align-items: baseline;
+    padding: 3px 4px 2px;
+  }
+
+  //the following ACTION-DEFAULT styles should really be in button.less
+  &-action-default {
+    background: linear-gradient(180deg, #FFFFFF 0%, #F6F6F6 100%);
+    box-shadow: inset 0 -1px 0 0 lighten(@gray5, 8%);
+    border: 1px solid lighten(@gray5, 8%);
+  }
+
+  &-action-default:hover,
+  &-action-default:focus {
     background: linear-gradient(180deg, #FFFFFF 0%, #EDEDED 100%);
     border-color: @gray5;
     box-shadow: inset 0 -1px 0 0 @gray5, 0 1px 1px 0 rgba(0,0,0,0.12);
   }
 
-  &-action:active,
+  &-action-default:active,
   &-item-container-measurement.open .chart-draggable-field-action,
   &-item-container-aggregation.open .chart-draggable-field-action {
     background: linear-gradient(180deg, #EDEDED 0%, #FFFFFF 99.31%);
     border-color: @gray5;
     box-shadow: inset 0 2px 2px 0 @gray5;
   }
+  //end ACTION-DEFAULT styles
 
-  &-action-measurement,
-  &-action-aggregation {
-    display: flex;
-    align-items: baseline;
+  //the following ACTION-PRIMARY styles should really be in button.less
+  &-action-primary {
+    background: linear-gradient(180deg, #6BA442 0%, #5A9330 100%);
+    border: 1px solid #4D7A2D;
+    box-shadow: inset 0 -1px 0 0 #4D7A2D;
+    color: white;
   }
+
+  &-action-primary:hover,
+  &-action-primary:focus {
+    background: linear-gradient(180deg, #6BA442 0%, #4A7E25 100%);
+    border: 1px solid #3B6A1B;
+    box-shadow: inset 0 -1px 0 0 #3B6A1B, 0 2px 4px 0 rgba(0,0,0,0.1);
+  }
+
+  &-action-primary:active,
+  &-item-container-reduction.open .chart-draggable-field-action-primary {
+    background: linear-gradient(180deg, #4A7E25 0%, #6BA442 100%);
+    border: 1px solid #3B6A1B;
+    box-shadow: inset 0 2px 2px 0 #3B6A1B;
+  }
+  //end ACTION-PRIMARY styles
 
   &-action-measurement {
     margin-right: 2px;
+    padding-left: 2px;
   }
 
   &-action-aggregation {
@@ -78,6 +106,7 @@
     flex-shrink: 0;
     flex-basis: 12px;
     font-size: 12px;
+    line-height: 15px;
     text-align: center;
     align-self: flex-end;
   }
@@ -147,5 +176,36 @@
     .chart-draggable-field-action-remove {
       opacity: 1;
     }
+  }
+
+  &-title-array {
+    font-size: 11px;
+    text-transform: uppercase;
+  }
+
+  //nested fields
+  &-nested {
+    background: linear-gradient(180deg, #FFFFFF 0%, #F6F6F6 100%);
+    border: 1px solid @gray5;
+    border-radius: 6px;
+    padding: 3px;
+    margin-bottom: 3px;
+  }
+
+  &-nested-controls {
+    margin-bottom: 0;
+  }
+
+  &-title-nested {
+    border-left-color: transparent;
+    padding-left: 1px;
+  }
+
+  .mms-icon-array {
+    color: @gray4;
+    flex-basis: 16px;
+    flex-grow: 0;
+    flex-shrink: 0;
+    align-self: flex-start;
   }
 }
