COMPASS-902: Bring back query bar info sprinkles

--- a/src/internal-packages/query/styles/querybar-option.less
+++ b/src/internal-packages/query/styles/querybar-option.less
@@ -48,6 +48,11 @@
     font-family: "Akzidenz", "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 11px;
     flex-grow: 0;
+
+    & .info-sprinkle {
+      margin-left: inherit;
+      margin-right: 5px;
+    }
   }
 
   &-label-info {
