--- a/src/internal-packages/query/styles/querybar-option.less
+++ b/src/internal-packages/query/styles/querybar-option.less
@@ -20,7 +20,16 @@
   }
 
   &-is-numeric-type {
-    flex-basis: 150px;
+    flex-basis: 120px;
+  }
+
+  &-is-boolean-type {
+    flex-basis: 80px;
+
+    .querybar-option-input {
+      position: relative;
+      top: -2px;
+    }
   }
 
   &-info-sprinkle {
