autocomplete dropdown styles

--- a/src/internal-packages/query/styles/index.less
+++ b/src/internal-packages/query/styles/index.less
@@ -6,7 +6,4 @@
 @import (inline) "./node_modules/codemirror/lib/codemirror.css";
 @import (inline) "./node_modules/codemirror/addon/hint/show-hint.css";
 @import (inline) "./node_modules/codemirror-mongodb/theme.css";
-
-.cm-s-mongodb {
-  height: auto;
-}
+@import './auto-complete.less';
