hide zero state when spec is valid.

--- a/src/internal-packages/chart/styles/chart-builder.less
+++ b/src/internal-packages/chart/styles/chart-builder.less
@@ -36,7 +36,12 @@
   }
 
   &-chart-area {
-    background-image: url('./images/chart/chart-builder-zero-state.png');
+    background: none;
+
+    &-has-zero-state {
+      background-image: url('./images/chart/chart-builder-zero-state.png');
+    }
+
     background-size: 600px 260px;
     background-position: 50% 60px;
     background-repeat: no-repeat;
