add some styles

--- a/src/internal-packages/chart/styles/field-panel.less
+++ b/src/internal-packages/chart/styles/field-panel.less
@@ -79,4 +79,19 @@
     padding-left: 10px;
   }
 
+  &-filter {
+    background-color: @gray6;
+    width: 100%;
+    &-icon {
+      color: @chart1;
+    }
+  }
+
+  &-search-input {
+    background-color: @gray7;
+    color: @gray4;
+    width: 100%;
+    border: none;
+    outline: none;
+  }
 }
