COMPASS-1256: Add filter box for fields in the FieldPanel (Via Store) (#1084)
* add filter component

* build the action and store uni-direction

* store changes to support filtering

* remove unused 'filter' variable

* use helper function to create parent paths

* remove completeFieldsCache and completeTopLevelFields from state

* add function to comment

* use only filter to pick out top level fields

* remove duplicates from create parent paths

It would be nice to be able to use a set data structure here but loads
uniq works.

* deep copy field to prevent nestedField changes being permanent

* add some unit tests

* add some styles

* Filter bar styles

* make font color in search box a little darker

--- a/src/internal-packages/chart/styles/field-panel.less
+++ b/src/internal-packages/chart/styles/field-panel.less
@@ -22,7 +22,7 @@
     align-items: center;
     display: flex;
     justify-content: space-between;
-    margin-bottom: 12px;
+    margin-bottom: 8px;
     padding: 0 4px;
   }
 
@@ -79,4 +79,24 @@
     padding-left: 10px;
   }
 
+  &-filter {
+    background-color: @gray7;
+    width: ~"calc(100% + 12px)";
+    margin-left: -6px;
+    height: 32px;
+    &-icon {
+      color: @linkText;
+      margin-left: 6px;
+    }
+  }
+
+  &-search-input {
+    background-color: @gray7;
+    line-height: 14px;
+    margin-left: 6px;
+    color: @gray2;
+    width: 100%;
+    border: none;
+    outline: none;
+  }
 }
