:sparkles: Add placeholder geo-hint overlay based on the just removed info sprinkle
Ready for style pass.

--- a/src/internal-packages/schema/styles/index.less
+++ b/src/internal-packages/schema/styles/index.less
@@ -521,6 +521,14 @@ svg.minichart {
   }
 }
 
+.map-overlay {
+  background: url(images/schema-geo-hint-overlay-placeholder.png) no-repeat;
+  bottom: 0;
+  min-height: 61px;
+  min-width: 150px;
+  position: absolute;
+}
+
 // -- d3-tip styling
 .d3-tip {
   z-index: 2;
