:art::fire: Resolve some styling regressions and remove handlers
* Put back the "help" CSS class
* Override the opacity
* Remove onHelpClicked handler

--- a/src/internal-packages/app/styles/info-sprinkle.less
+++ b/src/internal-packages/app/styles/info-sprinkle.less
@@ -15,3 +15,8 @@ i.info-sprinkle {
     content: @fa-var-info-circle;
   }
 }
+
+a i.info-sprinkle {
+  // Subview info sprinkles need to be more prominently opaque
+  opacity: 1.0;
+}
