--- a/src/internal-packages/schema/styles/index.less
+++ b/src/internal-packages/schema/styles/index.less
@@ -521,12 +521,34 @@ svg.minichart {
   }
 }
 
+.map:hover + .map-overlay {
+  display: block;
+}
+
 .map-overlay {
-  background: url(images/schema-geo-hint-overlay-placeholder.png) no-repeat;
-  bottom: 0;
-  min-height: 61px;
-  min-width: 150px;
+  display: none;
   position: absolute;
+  font-weight: bold;    
+  bottom: 20px;
+  left: 25px;
+
+  &-button {
+    background-image: linear-gradient(-180deg, #FFFFFF 0%, #F6F6F6 100%);
+    border: 2px solid #DDDDDD;
+    box-shadow: inset 0 -1px 0 0 #DDDDDD;
+    border-radius: 5px;
+    font-size: 11px;
+    padding: 15px 4px;
+    width: 80px;
+    height: 35px;
+    float: left;
+  }
+
+  &-text {
+    float: left;
+    margin-left: 5px;
+    line-height: 35px;
+  }
 }
 
 // -- d3-tip styling
