--- a/src/internal-packages/schema/styles/index.less
+++ b/src/internal-packages/schema/styles/index.less
@@ -519,9 +519,35 @@ svg.minichart {
   #circle.active {
     background-color: rgba(250, 250, 250, 0.9);
   }
-  i.help {
-    display: inline-block;
+}
+
+.map:hover + .map-overlay {
+  display: block;
+}
+
+.map-overlay {
+  display: none;
+  position: absolute;
+  font-weight: bold;    
+  bottom: 20px;
+  left: 25px;
+
+  &-button {
+    background-image: linear-gradient(-180deg, #FFFFFF 0%, #F6F6F6 100%);
+    border: 2px solid #DDDDDD;
+    box-shadow: inset 0 -1px 0 0 #DDDDDD;
+    border-radius: 5px;
+    font-size: 11px;
+    padding: 15px 4px;
+    width: 80px;
+    height: 35px;
     float: left;
+  }
+
+  &-text {
+    float: left;
+    margin-left: 5px;
+    line-height: 35px;
   }
 }
 
