Basic decoupling style pass to resolve orange hover :bug:

--- a/src/internal-packages/app/styles/info-sprinkle.less
+++ b/src/internal-packages/app/styles/info-sprinkle.less
@@ -18,5 +18,11 @@ i.info-sprinkle {
 
 a i.info-sprinkle {
   // Subview info sprinkles need to be more prominently opaque
+  color: #337ab7;
   opacity: 1.0;
+  text-decoration: none;
+
+  &:hover {
+    color: #23527c;
+  }
 }
