--- a/src/internal-packages/app/styles/info-sprinkle.less
+++ b/src/internal-packages/app/styles/info-sprinkle.less
@@ -15,3 +15,14 @@ i.info-sprinkle {
     content: @fa-var-info-circle;
   }
 }
+
+a i.info-sprinkle {
+  // Subview info sprinkles need to be more prominently opaque
+  color: #337ab7;
+  opacity: 1.0;
+  text-decoration: none;
+
+  &:hover {
+    color: #23527c;
+  }
+}
