align text to left

--- a/src/internal-packages/chart/styles/draggable-field.less
+++ b/src/internal-packages/chart/styles/draggable-field.less
@@ -207,4 +207,10 @@
     flex-shrink: 0;
     align-self: flex-start;
   }
+
+  &-reduction-tooltip {
+    .multi-line {
+      text-align: left !important;
+    }
+  }
 }
