COMPASS-1307: Fix filter persistence across tabs

--- a/src/internal-packages/query/styles/querybar.less
+++ b/src/internal-packages/query/styles/querybar.less
@@ -22,6 +22,10 @@
     & > .querybar-option:first-child {
       border: none;
     }
+
+    .CodeMirror-placeholder {
+      color: #999999;
+    }
   }
 
   &-has-focus {
