--- a/src/internal-packages/crud/styles/editable-element.less
+++ b/src/internal-packages/crud/styles/editable-element.less
@@ -13,7 +13,7 @@
 
   &-expand-button {
     position: absolute;
-    margin: 2px 0px 0px 5px;
+    padding: 2px 6px 0px 5px;
   }
 
   &-separator {
