don't show tooltip initially, stop click propagation

--- a/src/internal-packages/chart/styles/draggable-field.less
+++ b/src/internal-packages/chart/styles/draggable-field.less
@@ -20,8 +20,13 @@
     flex-grow: 1;
     flex-shrink: 1;
     flex-basis: auto;
+    pointer-events: none;
     overflow: hidden;
     white-space: nowrap;
+  }
+
+  &-info-sprinkle {
+    pointer-events: auto;
   }
 
   &-item-container-remove {
@@ -209,6 +214,7 @@
   }
 
   &-reduction-tooltip {
+    line-height: 1;
     .multi-line {
       text-align: left !important;
     }
