:memo: Add comment

--- a/src/internal-packages/indexes/styles/create-index-modal.less
+++ b/src/internal-packages/indexes/styles/create-index-modal.less
@@ -38,6 +38,7 @@
       }
 
       .Select-menu-outer {
+        // Avoids the dropdown being cut off/hidden/somewhere else inside modal
         position: inherit;
       }
 
