add border radius with todo?

--- a/src/internal-packages/app/styles/editable.less
+++ b/src/internal-packages/app/styles/editable.less
@@ -4,6 +4,8 @@
   .editable-wrapper {
     border: 1px solid transparent;
     background-color: @pw;
+    // TODO @satyasinha: could this could be more generic?
+    border-radius: 5px;
   }
 
   &-is-modified, &-is-updating, &-is-success, &-is-error {
