--- a/src/internal-packages/indexes/styles/create-index-modal.less
+++ b/src/internal-packages/indexes/styles/create-index-modal.less
@@ -6,9 +6,6 @@
   }
 
   .create-index-modal-content {
-    padding-left: 40px;
-    padding-right: 40px;
-
     .modal-header {
       padding-bottom: 4px;
     }
@@ -25,19 +22,6 @@
         margin-top: 8px;
         right: 10px;
       }
-
-      .col-md-6 {
-        padding-right: 0px;
-
-        .dropdown-menu {
-          max-height: 400px;
-          overflow: auto;
-        }
-      }
-
-      .col-md-4 {
-        padding-right: 0px;
-      }
     }
 
     .create-index-field-add {
@@ -46,27 +30,26 @@
 
     .create-index-field {
       margin-bottom: 5px;
+      display: flex;
 
       .has-error .Select-control {
         border: 1px solid #EF4C4C;
         box-shadow: 0 2px 6px 0 rgba(239,76,76,0.30);
       }
 
-      .create-index-field-dropdown-name {
-        width: 164px;
+      &-dropdown-name {
+        width: 260px;
         text-align: left;
         text-transform: none;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        padding-right: 25px;
+        padding-right: 10px;
         white-space: nowrap;
       }
 
-      .create-index-field-dropdown-type {
+      &-dropdown-type {
         width: 120px;
         text-align: left;
         text-transform: none;
-        margin-left: -7px;
+        margin-right: 8px;
       }
     }
 
@@ -129,10 +112,6 @@
           margin-right: -9px;
         }
       }
-    }
-
-    .index-field-dropdown-btn {
-      text-transform: none;
     }
 
     .create-index-confirm-buttons {
