--- a/src/internal-packages/query/styles/index.less
+++ b/src/internal-packages/query/styles/index.less
@@ -2,3 +2,8 @@
 @import './querybar-option.less';
 @import './sampling-message.less';
 @import './options-toggle.less';
+
+@import (inline) "./node_modules/codemirror/lib/codemirror.css";
+@import (inline) "./node_modules/codemirror/addon/hint/show-hint.css";
+@import (inline) "./node_modules/codemirror-mongodb/theme.css";
+@import './auto-complete.less';
