--- a/src/internal-packages/query/styles/querybar-option.less
+++ b/src/internal-packages/query/styles/querybar-option.less
@@ -41,13 +41,26 @@
     color: @pw;
     white-space: nowrap;
     border-radius: 14px;
-    padding: 0 5px;
+    padding: 2px 5px;
     margin-right: 5px;
     text-transform: uppercase;
     font-weight: bold;
     font-family: "Akzidenz", "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 11px;
     flex-grow: 0;
+
+    & .info-sprinkle {
+      margin-left: inherit;
+      margin-right: 3px;
+      font-size: 11px;
+      color: white;
+      top: 0px;
+
+      &:hover {
+        opacity: 1;
+        color: white;
+      }
+    }
   }
 
   &-label-info {
