COMPASS-1228: Implement tooltip and info sprinkle for array reductions (#1115)
* add tooltip

* remove pointer-events to make tooltip visible

* align text to left

* add a line break

* move tooltip up to encoding-channel

As per design the tool tip appears next to the encoding channel

* add extra props to react tooltip

- place tool tip to the left (place=“left”)
- click anywhere on the encoding channel that is not a dropdown to
dismiss tooltip (globalEventOff=“click”)

* pass showTooltip as a prop

showTooltip is being passed down as a prop from chart-builder to encoding-channel. Allowing tooltip to show when another field is being dragged.

* don't show tooltip initially, stop click propagation

* move tooltip to span and add test for tooltip existence

* remove unneeded code.

* remove blank line

--- a/src/internal-packages/chart/styles/draggable-field.less
+++ b/src/internal-packages/chart/styles/draggable-field.less
@@ -20,8 +20,13 @@
     flex-grow: 1;
     flex-shrink: 1;
     flex-basis: auto;
+    pointer-events: none;
     overflow: hidden;
     white-space: nowrap;
+  }
+
+  &-info-sprinkle {
+    pointer-events: auto;
   }
 
   &-item-container-remove {
@@ -159,7 +164,6 @@
     font-size: 11px;
     font-weight: bold;
     overflow: hidden;
-    pointer-events: none;
     text-overflow: ellipsis;
     white-space: nowrap;
   }
@@ -207,5 +211,12 @@
     flex-grow: 0;
     flex-shrink: 0;
     align-self: flex-start;
+  }
+
+  &-reduction-tooltip {
+    line-height: 1;
+    .multi-line {
+      text-align: left !important;
+    }
   }
 }
