--- a/src/internal-packages/query/styles/querybar.less
+++ b/src/internal-packages/query/styles/querybar.less
@@ -18,6 +18,7 @@
     border: 1px solid @gray5;
     background: @pw;
     margin-right: 10px;
+    overflow: hidden; 
 
     & > .querybar-option:first-child {
       border: none;
@@ -38,6 +39,7 @@
   }
 
   &-button-group {
+    display: flex;
     flex-grow: 0;
   }
 
