Fix width overflow bug for sort as well

--- a/src/internal-packages/query/styles/querybar-option.less
+++ b/src/internal-packages/query/styles/querybar-option.less
@@ -4,6 +4,8 @@
   height: 28px;
   margin: 0 10px;
   border-top: 1px solid @gray7;
+  overflow: scroll;
+  width: 100%;
 
   &-has-error {
     .querybar-option-label {
@@ -12,7 +14,7 @@
   }
 
   &-has-toggle {
-    padding-right: 130px;
+    padding-right: 150px;
   }
 
   &-is-document-type {
